# data-analysis-crew

./: .gitignore  README.md  envexample  pyproject.toml
data/: food_inventory.txt
data/lending_club/: data_card.txt
data/lending_club/analytical_results/: data_dictionary.json  hypotheses.txt  hypotheses_with_tests.txt  hypotheses_with_tests_and_code.txt
data/lending_club/data_dictionary/: RejectStats-Table 1.csv  browseNotes-Table 1.csv
src/data_analyst/: crew.py  main.py
src/data_analyst/config/: agents.yaml  tasks.yaml
src/zoocrew/: crew.py
src/zoocrew/config/: agents.yaml  tasks.yaml
