[tool.poetry]
name = "zoocrew"
version = "0.1.0"
description = "change me to describe your tool"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }
crewai-tools = "^0.4.6"
pip = "^24.1.1"
#install = "^1.3.5"
langchain-groq = "^0.1.6"
langchain-community = "^0.2.10"

[tool.poetry.scripts]
feed = "zoocrew.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
