[tool.poetry]
name = "data_analyst"
version = "0.1.0"
description = "A data analytics team"
authors = ["Your Name <jacob@phyleserver.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }
crewai-tools = "^0.4.6"
pip = "^24.1.1"
#install = "^1.3.5"
langchain-groq = "^0.1.6"
langchain-community = "^0.2.10"

[tool.poetry.scripts]
prepare_metadata = "data_analyst.main:prepare_metadata"
formulate_hypotheses = "data_analyst.main:formulate_hypotheses"
attach_statistical_tests = "data_analyst.main:attach_statistical_tests"
attach_code = "data_analyst.main:attach_code"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
